# Core

./: .dockerignore  .gitignore  Dockerfile
.github/: standalone.yml
.github/workflows/: boost.yml  container.yml  docker.yml  standalone.yml
docker/: entrypoint.sh
docs/planning/: v2.0 — Hydra.md
source/: CMakeLists.txt  about.h  app.cpp  application.h  authorization.h  build.sh  environment.h  headers.h  main.cpp  network.h  server.h  session.h  tests.cc
